# mi-repo-de-skills

./: .gitignore  AGENTS.md  README.md  agents.json  opencode.json
.agents/skills/image-to-ai/: SKILL.md  image_to_ai.py  requirements.txt
.agents/skills/ponytail/: SKILL.md
.github/workflows/: ci.yml
.opencode/plugins/: ponytail.mjs
hooks/: ponytail-config.js  ponytail-instructions.js
mcp-servers/image-to-ai/: README.md  __init__.py  pyproject.toml  test_image_to_ai.py
mcp-servers/mcp_servers/: image_to_ai.py
skills/auto-sync/: SKILL.md
skills/autonomous-ai-agents/hermes-gateway-setup/: SKILL.md
skills/changelog-generator/: SKILL.md
skills/cloudflare_web_scraper/: SKILL.md
skills/cloudflare_web_scraper/scripts/: scrape.py
skills/devops/flutter-android-build/: SKILL.md
skills/devops/local-ollama-workstation/: SKILL.md
skills/devops/wsl-windows-autostart/: SKILL.md
skills/devops/wsl-windows-dev-env/: SKILL.md
skills/error-handling-patterns/: SKILL.md
skills/frontend-design/: SKILL.md
skills/github/github-api-via-curl/: SKILL.md
skills/graphql-api-design/: SKILL.md
skills/interface-design/: SKILL.md
skills/mlops/ollama-windows-setup/: SKILL.md
skills/openclaw-imports/memoria-del-proyecto/: SKILL.md
skills/postgresql-table-design/: SKILL.md
skills/research/trading-strategy-backtesting/: SKILL.md
skills/research/trading-strategy-development/: SKILL.md
skills/restful-api-design/: SKILL.md
skills/software-development/external-skill-repo-integration/: SKILL.md
skills/vercel-react-best-practices/: SKILL.md
(+29 files in other folders)
