[project]
name = "mcp-image-to-ai"
version = "1.0.0"
description = "MCP server for converting images to AI-ready formats"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
pytorch = ["torch>=2.0.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-image-to-ai = "mcp_servers.image_to_ai:main"

[tool.mcp]
server = "mcp_servers.image_to_ai:main"